demos/devfile-sample-go-basic/add-ons/add-ons/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devfile-sample-go-basic 
spec:
  selector: 
    app.kubernetes.io/instance: devfile-sample-go-basic
  ports:
  - port: 8081
    targetPort: 8081
