demos/devfile-sample-go-basic/add-ons/add-ons/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devfile-sample-go-basic 
  labels:
    app: devfile-sample-go-basic
spec: 
  port:
    targetPort: 8081
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: devfile-sample-go-basic
    weight: 100
